LPS-64887 - Footer navigation align fix

--- a/modules/apps/foundation/frontend-theme/frontend-theme-product-app/src/css/partials/_footer.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-product-app/src/css/partials/_footer.scss
@@ -34,7 +34,7 @@
 	margin-bottom: 15px;
 
 	@include media-query($breakpoint_tablet, null) {
-		margin-left: 132px;
+		margin: 0 0 0 132px;
 		vertical-align: middle;
 	}
 }
